bg image tropical

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
+
+
     <h1>Hi, My name is Jason.</h1>
+    <h2>I am a developer based in WInter Springs, Florida...</h2>
+    <!--Photo by <a href="https://unsplash.com/@rpnickson?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Roberto Nickson</a> on <a href="/s/photos/tropical-tech?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+    -->
     <script src="js/portfolio.js"></script>
 </body>
 
