all screen sizes have diff text and color

--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
 </head>
 
 <body>
-
-    <div class="sm-screen-text">
-        <h1>Hi, My name is Jason.</h1>
-        <h2>I am a Mobile first developer based in Winter Springs, Florida...</h2>
-    </div>
-    <div class="med-screen-text">
-        <h1>Hi, My name is Jason.</h1>
-        <h2>I am a developer based in Winter Springs, Florida...for medium screens</h2>
-    </div>
-    <div class="lg-screen-text">
-        <h1>Hi, My name is Jason.</h1>
-        <h2>I am a developer based in Winter Springs, Florida...for large screens</h2>
+    <div class="overlay">
+        <div class="sm-screen-text">
+            <h1>Hi, My name is Jason.</h1>
+            <h2>I am a Mobile first developer based in Winter Springs, Florida...</h2>
+        </div>
+        <div class="med-screen-text">
+            <h1>Hi, My name is Jason.</h1>
+            <h2>I am a developer based in Winter Springs, Florida...for medium screens</h2>
+        </div>
+        <div class="lg-screen-text">
+            <h1>Hi, My name is Jason.</h1>
+            <h2>I am a developer based in Winter Springs, Florida...for large screens</h2>
+        </div>
     </div>
     <!--Photo by <a href="https://unsplash.com/@rpnickson?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Roberto Nickson</a> on <a href="/s/photos/tropical-tech?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-    -->
+            -->
+
     <script src="js/portfolio.js"></script>
 </body>
 
