changing colors and phrases at different media queries

--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 </head>
 
 <body>
+    <ul>
+        <li>ABOUT</li>
+        <li>PROJECTS</li>
+        <li>HOME</li>
+    </ul>
     <div class="overlay">
         <div class="sm-screen-text">
             <h1>Hi, My name is Jason.</h1>
             <h2>I am a Mobile first developer based in Winter Springs, Florida...</h2>
+            <h2>I also have experience building medium and wide screen sized layouts and can make all of my layouts scale to your needs</h2>
         </div>
         <div class="med-screen-text">
             <h1>Hi, My name is Jason.</h1>
