adds different picturs at all screen sizes

--- a/index.html
+++ b/index.html
@@ -19,15 +19,20 @@
         <div class="sm-screen-text">
             <h1>Hi, My name is Jason.</h1>
             <h2>I am a Mobile first developer based in Winter Springs, Florida...</h2>
+            <img src="img/jason-beard-cap.jpg" style="height:200px; width: 200px; border-radius: 50%;">
             <h2>I also have experience building medium and wide screen sized layouts and can make all of my layouts scale to your needs</h2>
         </div>
         <div class="med-screen-text">
             <h1>Hi, My name is Jason.</h1>
             <h2>I am a developer based in Winter Springs, Florida...for medium screens</h2>
+            <img src="img/cap-up-nostil.jpg" style="height:300px; width: 300px; border-radius: 50%;">
         </div>
         <div class="lg-screen-text">
             <h1>Hi, My name is Jason.</h1>
+            <img src="img/screaming-jnutt.jpg" style="height:350px; width: 300px; border-radius: 50%;">
             <h2>I am a developer based in Winter Springs, Florida...for large screens</h2>
+
+
         </div>
     </div>
     <!--Photo by <a href="https://unsplash.com/@rpnickson?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Roberto Nickson</a> on <a href="/s/photos/tropical-tech?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
