--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         <div class="sm-screen-text">
             <h1>Hi, My name is Jason.</h1>
             <h2>I am a Mobile first developer based in Winter Springs, Florida...</h2>
-            <img src="img/jason-beard-cap.jpg" style="height:200px; width: 200px; border-radius: 50%;">
+            <img id="sm-img" src="img/jason-beard-cap.jpg" style="height:200px; width: 200px; border-radius: 50%;">
             <h2>I also have experience building medium and wide screen sized layouts and can make all of my layouts scale to your needs</h2>
         </div>
         <div class="med-screen-text">
             <h1>Hi, My name is Jason.</h1>
             <h2>I am a developer based in Winter Springs, Florida...for medium screens</h2>
-            <img src="img/cap-up-nostil.jpg" style="height:300px; width: 300px; border-radius: 50%;">
+            <img id="med-img" src="img/cap-up-nostil.jpg" style="height:300px; width: 300px; border-radius: 50%;">
         </div>
         <div class="lg-screen-text">
             <h1>Hi, My name is Jason.</h1>
-            <img src="img/screaming-jnutt.jpg" style="height:350px; width: 300px; border-radius: 50%;">
+            <img id="lg-img" src="img/screaming-jnutt.jpg" style="height:350px; width: 300px; border-radius: 50%;">
             <h2>I am a developer based in Winter Springs, Florida...for large screens</h2>
 
 
