--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <ul>
         <li>ABOUT</li>
-        <li>PROJECTS</li>
+        <a href="caurosel.html">
+            <li>PROJECTS</li>
+        </a>
         <li>HOME</li>
     </ul>
     <div class="overlay">
