bg image update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <ul>
+    <ul id="mobile-menu">
         <li>ABOUT</li>
         <a href="caurosel.html">
             <li>PROJECTS</li>
@@ -23,6 +23,9 @@
             <h2>I am a Mobile first developer based in Winter Springs, Florida...</h2>
             <img id="sm-img" src="img/jason-beard-cap.jpg" style="height:200px; width: 200px; border-radius: 50%;">
             <h2>I also have experience building medium and wide screen sized layouts and can make all of my layouts scale to your needs</h2>
+            <div class="box">
+
+            </div>
         </div>
         <div class="med-screen-text">
             <h1>Hi, My name is Jason.</h1>
